# Todo-App-With-FastAPI-and-Poetry

./: .env  main.py  pyproject.toml
tests/: test_main.py
todoapp/: main.py  setting.py
